# alphazero-multi-game

./: .dockerignore  BUILDING_AND_TESTING.md  CMakeLists.txt  Dockerfile  Dockerfile.real-tests  Dockerfile.test  PRD.md  WSL_BUILD_INFO.md  analysis.md  build-fix.sh  build-wsl.sh  build.sh  build_linux.sh  coding_guide_for_claude.md  cuda_test.cpp  debug-tests.sh  folder_structure.md  milestones.md  minimal_torch.cpp  standalone_cuda_test.cpp  test-alphazergo.sh  test_build.cpp  test_pthread.sh
alphazero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
build_new/: CMakeCache.txt  Makefile  alphazero_minimal  cmake_install.cmake
build_with_torch/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cuda_test_app  standalone_cuda_test
build_with_torch/src/: Makefile  cmake_install.cmake
build_with_torch/src/api/: Makefile  cmake_install.cmake
build_with_torch/src/cli/: Makefile  cmake_install.cmake
build_with_torch/src/core/: Makefile  cmake_install.cmake
build_with_torch/src/elo/: Makefile  cmake_install.cmake
build_with_torch/src/games/: Makefile  cmake_install.cmake
build_with_torch/src/mcts/: Makefile  cmake_install.cmake
build_with_torch/src/nn/: Makefile  cmake_install.cmake
build_with_torch/src/pybind/: Makefile  cmake_install.cmake
build_with_torch/src/selfplay/: Makefile  cmake_install.cmake
build_with_torch/src/ui/: Makefile  cmake_install.cmake
build_with_torch/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  core_tests[1]_include.cmake  game_tests[1]_include.cmake  integration_tests[1]_include.cmake  mcts_tests[1]_include.cmake  nn_tests[1]_include.cmake
cmake/: Compatibility.cmake  FindCUDNN.cmake  alphazero-config.cmake.in
data/games/: 000_20250430_193533.json  000_20250430_193733.json  001_20250430_193533.json  001_20250430_193738.json  002_20250430_193533.json  002_20250430_193734.json  003_20250430_193535.json  003_20250430_193739.json  004_20250430_193532.json  004_20250430_193735.json  005_20250430_193537.json  005_20250430_193737.json  006_20250430_193538.json  006_20250430_193740.json  007_20250430_193534.json  007_20250430_193738.json  008_20250430_193538.json  008_20250430_193734.json  009_20250430_193539.json  009_20250430_193740.json  010_20250430_193533.json  010_20250430_193736.json  011_20250430_193538.json  011_20250430_193735.json  012_20250430_193533.json  012_20250430_193740.json  013_20250430_193538.json  013_20250430_193736.json  014_20250430_193533.json  014_20250430_193735.json  015_20250430_193539.json  015_20250430_193734.json  016_20250430_193537.json  016_20250430_193733.json  017_20250430_193537.json  017_20250430_193734.json  018_20250430_193536.json  018_20250430_193735.json  019_20250430_193535.json  019_20250430_193734.json  (+160 more)
examples/: CMakeLists.txt  chess_example.cpp  cuda_test.cpp  go_example.cpp  gomoku_example.cpp  test_mcts_nn.cpp
include/alphazero/: AlphaZero.h  types.h
include/alphazero/api/: http_server.h  rest_api.h
include/alphazero/cli/: cli_interface.h  command_parser.h
include/alphazero/core/: compatibility.h  game_factory.h  game_registration.h  igamestate.h  plugin_api.h  plugin_loader.h  registry.h  variant_args.h  zobrist_hash.h
include/alphazero/elo/: elo_tracker.h
include/alphazero/mcts/: mcts_node.h  parallel_mcts.h  thread_pool.h  transposition_table.h
include/alphazero/nn/: attack_defense_module.h  batch_queue.h  neural_network.h  random_policy_network.h  torch_neural_network.h
include/alphazero/selfplay/: dataset.h  game_record.h  (+1 more)
python/: README_PYTHON_BINDINGS.md  alphazero_model.py  alphazero_self_play.py  alphazero_train.py  az_test.py  requirements.txt  setup.py  simple_export.py  test_alphazero.py
python/alphazero/: __init__.py
python/alphazero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/examples/: play_chess.py  play_go.py  play_gomoku.py
python/pyalphazero/: __init__.py
python/scripts/: api_server.py  benchmark.py  convert_model.py  evaluate.py  export_model.py  hyperopt.py  orchestrate_selfplay.py  package_model.py  regression_test.py  self_play.py  simple_export.py  tournament.py  train.py  visualize_mcts.py
python/tests/: test_binding.py  test_models.py  test_training.py
scripts/: benchmark_selfplay.sh  build.sh  docker-entrypoint.sh  run_alphazero_pipeline.sh
simplified_nn/: simple_neural_net.h
src/: CMakeLists.txt
src/api/: CMakeLists.txt  http_server.cpp  rest_api.cpp  server_main.cpp
src/cli/: CMakeLists.txt  cli_interface.cpp  cli_main.cpp  command_parser.cpp
src/core/: AlphaZero.cpp  CMakeLists.txt  game_factory.cpp  gomoku_state_plugin.cpp  igamestate.cpp  plugin_loader.cpp  registry.cpp  zobrist_hash.cpp
src/elo/: CMakeLists.txt  elo_tracker.cpp
src/games/: CMakeLists.txt
src/games/chess/: CMakeLists.txt  chess960.cpp  chess_rules.cpp  chess_state.cpp
src/games/go/: CMakeLists.txt  go_rules.cpp  go_state.cpp
src/games/gomoku/: CMakeLists.txt  gomoku_rules.cpp  gomoku_state.cpp
src/gui/: gui_main.cpp
src/mcts/: CMakeLists.txt  mcts_node.cpp  parallel_mcts.cpp  thread_pool.cpp  transposition_table.cpp
src/nn/: CMakeLists.txt  attack_defense_module.cpp  batch_queue.cpp  ddw_randwire_resnet.cpp  neural_network.cpp  random_policy_network.cpp  torch_neural_network.cpp
src/pybind/: CMakeLists.txt  bindings.cpp  python_bindings.cpp
src/selfplay/: CMakeLists.txt  dataset.cpp  game_record.cpp  self_play_manager.cpp  selfplay_main.cpp
src/ui/: CMakeLists.txt  game_ui.cpp  renderer.cpp
tests/: CMakeLists.txt
tests/core/: game_factory_test.cpp  igamestate_test.cpp  zobrist_test.cpp
tests/games/chess/: chess_state_test.cpp
tests/games/go/: go_state_test.cpp
tests/games/gomoku/: gomoku_state_test.cpp
tests/integration/: chess_integration_test.cpp  go_integration_test.cpp  gomoku_integration_test.cpp
tests/mcts/: mcts_node_test.cpp  parallel_mcts_test.cpp  transposition_table_test.cpp
tests/nn/: attack_defense_module_test.cpp  batch_queue_test.cpp  neural_network_test.cpp  random_policy_network_test.cpp  torch_neural_network_test.cpp
(+26 files in other folders)
